--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,10 @@
     <string name="Reset_no">Нет</string>
     <string name="Reset_yes">Да</string>
 
+    <string name="Missions">Миссии</string>
+
+    <string name="score_5">5</string>
+    <string name="score_10">10</string>
+    <string name="score_15">15</string>
+
 </resources>
