--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,8 @@
     <string name="score_10">10</string>
     <string name="score_15">15</string>
 
+    <string name="achives">Собрать слова: </string>
+
 
 
 
